@@ -20,6 +20,8 @@ git-annex (5.20150825) UNRELEASED; urgency=medium
   * sync: Add --no-commit, --no-pull, --no-push options to turn off parts of
     the sync process, as well as supporting --commit, --pull, --push, and
     --no-content options to specify the (current) default behavior.
+  * annex.hardlink extended to also try to use hard links when copying from
+    the repository to a remote.
 
  -- Joey Hess <id@joeyh.name>  Tue, 01 Sep 2015 14:46:18 -0700
 
